# ipremom-cfrna-preeclampsia

./: README.md  pyproject.toml  requirements.txt  run.sh
config/RNAseq/: RNAseq_config.yml
config/model_optimizer/: elasticnet_config_parameters.yml  lasso_config_parameters.yml  rf_config_parameters.yml  svc_config_parameters.yml  xgb_config_parameters.yml
config/paths/: data_model_paths.yml
config/patients/: patients.yml
config/snakemake-profile/: config.v8+.yaml
envs/: main.yaml
src/: Snakefile
src/notebooks/data_analysis/: RNAseq_statistics.ipynb
src/notebooks/data_analysis/quality_reports/: figures_paper.ipynb  report_MOMX.ipynb
src/notebooks/modelling/: EOPE_T1.ipynb  EOPE_T2.ipynb  LOPE_T1.ipynb  LOPE_T2.ipynb
src/notebooks/modelling/cross_modelling/: cross_modelling.ipynb
src/utils/: data_loader.py
src/utils/RNAseq_utils/: RNAseq_utils.py  RNAseq_utils_coverage.py  RNAseq_utils_number_reads.py  RNAseq_utils_quality_reads.py  RNAseq_utils_sequence_depth.py
src/utils/cfRNA_utils/: build_counts_matrix.R  compute_logFC.R  compute_timeStats.R  diffexp_limma.R  featureSelection_jackniffing.R  filter_expression.R  filter_median.R  norm_vst.R
src/utils/feature_importance/: feature_importance_utils.py
src/utils/model_optimizer/: evaluator.py  optimizer.py
src/utils/modelling_plots/: modelplots.py
